# spider-bot

./: .gitignore  Cargo.toml  Dockerfile  README.md  init.sql
.github/workflows/: docker-build.yml
bot_macros/: Cargo.toml
bot_macros/src/: lib.rs
infra/: Chart.yaml  redeploy.sh  values.yaml
infra/sql/: 0001_init.sql  0002_species.sql  0002_telegram_users.sql  0003_species.sql  0003_species_feeding.sql  0004_more_species.sql  0005_fix_date.sql  0006_fix_format_date.sql  0007_feeding_schedule.sql  0008_cleanup_and_enhancements.sql  0008_species_feeding.sql  default_data.sql
infra/templates/: db-init.yaml  deployment.yaml
src/: error.rs  main.rs
src/bot/: bot.rs  callbacks.rs  commands.rs  dialog.rs  keyboards.rs  mod.rs  notifications.rs
src/db/: db.rs  init.rs  mod.rs
src/models/: cricket.rs  enums.rs  feeding.rs  health.rs  mod.rs  models.rs  molt.rs  new.rs  tarantula.rs  user.rs
