[package]
name = "spider-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
rusqlite = { version = "0.33.0", features = ["bundled", "chrono"] }
chrono = {version = "0.4.39", features = ["serde"]}
serde = { version = "1.0.215", features = ["derive"] }
log = "0.4.22"
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros"] }
thiserror = "2.0.7"
teloxide = { version = "0.13.0", features = ["macros"] }
r2d2 = "0.8"
r2d2_sqlite = "0.26.0"
env_logger = "0.11.5"
bot-macros = {path = "./bot_macros"}
async-trait = "0.1.83"
futures-core = "0.3.31"